can skip CDD because it takes a long time

--- a/databases.ini
+++ b/databases.ini
@@ -4,6 +4,8 @@ viral_protein = /media/THING1/sminot/timecourse/4AnnotateContigs/4.12TaxonomicFa
 
 [CDD]
 
+skip=TRUE ; do not run CDD because it is time consuming
+; skip=FALSE ; to run CDD 
 cdd = /media/THING1/dryga/PhageDynamics/CDD/cdd/little_endian/Cdd
 rpsbproc_ini = ./rpsbproc.ini
 
