--- a/tests/valid_config_file.ini
+++ b/tests/valid_config_file.ini
@@ -4,6 +4,7 @@ viral_protein = /media/THING1/sminot/timecourse/4AnnotateContigs/4.12TaxonomicFa
 
 [CDD]
 
+skip = FALSE
 cdd = /media/THING1/dryga/PhageDynamics/CDD/cdd/little_endian/Cdd
 rpsbproc_ini = ./rpsbproc.ini
 
